--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,24 +2,26 @@
     <div class="d-flex align-items-center">
         <div class="container p-4">
             <div class="row border-bottom">
-                <div class="col-2 p-2 border-end">
+                <div class="col-3 p-2 border-end">
                     <app-score></app-score>
                 </div>
-                <div class="col p-2">
+                <div class="col p-2 d-flex">
                     <app-inventory></app-inventory>
-                </div>
-                <div class="col-4 p-2">
-                    <button (click)="newGame()" class="btn btn-outline-secondary ms-auto">
+                    <button (click)="newGameModal(newGame)" class="btn btn-outline-secondary ms-auto">
                         <i class="bi bi-dice-5-fill"></i>
-                        Nova Igra
                     </button>
                 </div>
             </div>
             <div class="row">
-                <div class="col p-5">
+                <div class="col p-2 pt-3">
                     <app-board *ngIf="!gameWon && !gameOver"
                                class="d-flex justify-content-center"></app-board>
-                    <h1 *ngIf="gameOver" class="text-center">Konec igre.</h1>
+                    <h1 *ngIf="gameOver" class="text-center">
+                        Konec igre.
+                        <button (click)="actionConfirmNewGame()" class="btn btn-outline-secondary ms-auto">
+                            <i class="bi bi-dice-5-fill"></i> Začni novo
+                        </button>
+                    </h1>
                     <h1 *ngIf="gameWon" class="text-center">Čestitke!</h1>
                     <app-goals *ngIf="gameWon"></app-goals>
                 </div>
@@ -27,5 +29,18 @@
         </div>
     </div>
 </section>
+
+<ng-template #newGame>
+    <div class="modal-header">
+        <h4 class="modal-title pull-left text-uppercase"><i class="bi bi-dice-5-fill"></i> Nova igra?</h4>
+        <button (click)="modalRef?.hide()" aria-label="Close" class="btn-close close pull-right" type="button">
+            <span aria-hidden="true" class="visually-hidden">&times;</span>
+        </button>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" (click)="actionConfirmNewGame()">Začni novo igro</button>
+    </div>
+</ng-template>
+
 
 <router-outlet></router-outlet>
