--- a/src/app/goals/goals.component.html
+++ b/src/app/goals/goals.component.html
@@ -1,4 +1,5 @@
 <div class="h-100">
+    <div class="alert alert-light">Lahko najdeš besede različnih dolžin?</div>
     <div class="">
         <ul class="list-group list-group-flush">
             <li *ngFor="let lengthEntry of gameService.goalsByLength | keyvalue; let last = last"
